# Mr_Zappy

./: .flake8  .pre-commit-config.yaml  LICENSE  adafruit-circuitpython-feather_m4_express-en_GB-9.2.8 (1).uf2  alignment_data.json  alignment_mag_grav_data.json  boot.py  boot_out.txt  calibration_data.json  calibration_dict.json  code.py  flash_lib.bat  flash_src.bat  old_example_code.py  pyproject.toml  requirements.txt  settings.toml
.claude/: settings.local.json
BLE Slave/: adafruit-circuitpython-itsybitsy_nrf52840_express-en_GB-9.2.8.uf2  boot_out.txt  code.py
BLE board/: boot_out.txt  code.py
C++/: CLAUDE.md  firmware.uf2
DiscoX C++ BLE/: platformio.ini
Main board/: adafruit-circuitpython-feather_m4_can-en_GB-9.2.9.uf2  boot.py  boot_out.txt  calibration_dict.json  code.py  new_code_backup.py  settings.toml
Main board C++/: CLAUDE.md  CONVERSION_PLAN.md
examples/: 1. Display_manager Example.py  2. Disco_manager Example.py  3. Sensor_manager Example.py  5. Blutooth example.py  Battery voltage monitoring.py  Do calibration and save calibration object to file.py  Laser Example.py  Neopixle_example.py  OLED Example.py  Orientation examples.py  RM3100 Example.py  RainbowRGB.py  Test buttons.py
lib/: Calibration_testing.py  ble_manager.py  button_manager.py  calibration_calculate_alignment.py  calibration_calculate_ellipsoid.py  calibration_manager.py  calibration_mode.py  caveble.py  disco_manager.py  display_manager.py  sensor_manager.py  temp_code_storage.py
src/: Angles.py  code.py  hardware_functions.py  main_board.py  screen_hardware.py
test files/: calibration_startup.py
(+133 files in other folders)
