[project]
name="mr-zappy"
version = "0.1.dev0"
description = "Cave survey device"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "", email = ""},
]


[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
